added example for XOR

--- a/labs/lab02-Perceptron.ipynb
+++ b/labs/lab02-Perceptron.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "Ak ste úspešne implementovali všetky funkcie, môžete natrénovať perceptrón pomocou dát z datasetu Iris. Dataset je už predspracovaný vo funkcii `main`. Vašou úlohou je vytvoriť nový perceptrón a natrénovať ho na dátach. Pre vizualizáciu úspešnosti trénovania vykreslite rozhodovanie perceptrónu pred a po trénovaní pomocou funkcie `plot_decision_regions`.\n",
     "\n",
-    "Ukážkové riešenie cvičenia nájdete na [tejto adrese](sources/lab02/perceptron-solution.py)."
+    "Ukážkové riešenie cvičenia nájdete na [tejto adrese](sources/lab02/perceptron-solution.py). Aplikáciu pre XOR problém nájdete na [tejto adrese](sources/lab02/perceptron-xor.py)."
    ]
   }
  ],
