corrected typo in lab 8

--- a/labs/lab08-unsupervised-learning.ipynb
+++ b/labs/lab08-unsupervised-learning.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "## 1.3. Testovanie modelu\n",
     "\n",
-    "Presnosť modelu otestujeme vizualizáciou aby sme jednoznačne videli rozdiely medzi očakávanými výstupmi a výstupmi modelu. Keďže príznakový priestor má teraz štyri dimenzie, na vizualizáciu použijeme iba pred tým vybrané príznaky *sepal length* a *spela width* (výstup ale nemeníme). Vo vizualizácii príklady budú reprezentované ako body v dvojdimenzionálnom priestore a ich farba bude reprezentovať triedu. Na priradenie farby ku triede definujeme pomocnú funkciu `color_code`:"
+    "Presnosť modelu otestujeme vizualizáciou aby sme jednoznačne videli rozdiely medzi očakávanými výstupmi a výstupmi modelu. Keďže príznakový priestor má teraz štyri dimenzie, na vizualizáciu použijeme iba pred tým vybrané príznaky *sepal length* a *sepal width* (výstup ale nemeníme). Vo vizualizácii príklady budú reprezentované ako body v dvojdimenzionálnom priestore a ich farba bude reprezentovať triedu. Na priradenie farby ku triede definujeme pomocnú funkciu `color_code`:"
    ]
   },
   {
